# Computational-Intelligence-Labs

./: .gitignore
01_CNN/: pyproject.toml
01_CNN/core/: __init__.py  regularization.py  train.py
01_CNN/dataset/: __init__.py  flowers_dataset.py  generate_split.py
01_CNN/utils/: image_preprocessor.py  plotting.py
03_Genetic_Algorithms/: main.py
04_Particle_Swarm_Optimization/: main.py
05_Hybrid_Systems/: main.py
